Add Project files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             sizes="32x32"
             href="./images/favicon-32x32.png"
         />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap"
+        />
         <link rel="stylesheet" href="./style.css" />
         <title>Frontend Mentor | NFT preview card component</title>
     </head>
@@ -19,27 +22,38 @@
         <div class="container">
             <main>
                 <figure>
-                    <img src="./images/image-equilibrium.jpg" alt="Equilibrium Preview" class="img1" />
-                    <img src="./images/icon-view.svg" alt="View Icon" class="img2" />                    
+                    <img
+                        src="./images/image-equilibrium.jpg"
+                        alt="Equilibrium Preview"
+                        class="img1"
+                    />
+                    <img
+                        src="./images/icon-view.svg"
+                        alt="View Icon"
+                        class="img2"
+                    />
                 </figure>
                 <h2>Equilibrium #3429</h2>
                 <p>Our Equilibrium colllection promotes balance and calm</p>
 
                 <div class="row">
                     <div class="logo">
-                        <img src="./images/icon-ethereum.svg" alt="eth icon">
+                        <img src="./images/icon-ethereum.svg" alt="eth icon" />
                         <h5>0.041ETH</h5>
                     </div>
                     <div class="time">
-                        <img src="./images/icon-clock.svg" alt="clock icon">
+                        <img src="./images/icon-clock.svg" alt="clock icon" />
                         <span>3 days left</span>
-                    </div>                    
+                    </div>
                 </div>
-                <hr>
+                <hr />
                 <div class="avatar">
-                    <img src="./images/image-avatar.png" alt="Jules Wyvern avatar">
-                    <p>Creation of </p><a href="#">Jules Wyvern</a>
-                    
+                    <img
+                        src="./images/image-avatar.png"
+                        alt="Jules Wyvern avatar"
+                    />
+                    <p>Creation of</p>
+                    <a href="#">Jules Wyvern</a>
                 </div>
             </main>
             <footer class="attribution">
@@ -47,8 +61,11 @@
                 <a
                     href="https://www.frontendmentor.io?ref=challenge"
                     target="_blank"
-                    >Frontend Mentor</a>. Coded by
-                <a href="https://www.frontendmentor.io/profile/Ig-Matrix">Omoma Ighawosa</a>.
+                    >Frontend Mentor</a
+                >. Coded by
+                <a href="https://www.frontendmentor.io/profile/Ig-Matrix"
+                    >Omoma Ighawosa</a
+                >.
             </footer>
         </div>
     </body>
